js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/constructor.js
assert
.
sameValue
(
SyntaxError
.
prototype
.
constructor
SyntaxError
)
;
verifyProperty
(
SyntaxError
.
prototype
"
constructor
"
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
